--- a/src/main/python/ui/crm/model/BrandsXpath/ogtrade_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/ogtrade_xpath.yml
@@ -1,5 +1,7 @@
 FinancialTransactionsPage:
   client_name_element: "(//*[@id='listBody']//tr/td[4])[%s]"
   modified_time_element: "TBD"
+  tab: "//li[contains(text(),'Credit out')]"
+  demo_tab: "//li[contains(text(),'Demo trading accounts transactions')]"
 LeadDetailViewInfo:
     referral: "//td[contains(text(),'Referral')]//following-sibling::td[1]"
