old_forex_updating_of_brands_xpath: - updating tests and pages

--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -6,6 +6,7 @@ FinancialTransactionsPage:
   modified_time_element: "(//*[@id='listBody']//tr/td[10])[%s]"
   tab: "//li[contains(text(),'Credit Out')]"
   demo_tab: "//li[contains(text(),'Demo Accounts Transactions')]"
+  deposits_tab: "//li[contains(text(),'Deposits')]"
   withdraw_tab: "//li[contains(text(),'Withdraw')]"
   trading_account_element: "(//*[@id='listBody']//tr/td[3])[%s]//a"
 LeadViewInfo:
