--- a/src/main/python/ui/crm/model/BrandsXpath/fxpmarkets_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/fxpmarkets_xpath.yml
@@ -3,3 +3,4 @@ FinancialTransactionsPage:
   transaction_type_drop_down: "//td[7]/div/div[1]/button"
   transaction_type_element: "(//*[@id='listBody']//tr/td[7])[%s]"
   modified_time_element: "(//*[@id='listBody']//tr/td[14])[%s]"
+  deposits_tab: "//li[contains(text(),'Deposit')]"
