old_forex_updating_of_brands_xpath: changed tests for old forex

--- a/src/main/python/ui/crm/model/BrandsXpath/itrader_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/itrader_xpath.yml
@@ -1,4 +1,2 @@
-ClientsPage:
-  id_client: "//a[contains(text(), 'ACC')]"
-FinancialTransactionsPage:
-  modified_time_element: "(//*[@id='listBody']//tr/td[14])[%s]"
+LeadDetailViewInfo:
+    referral: "//td[contains(text(),'Referral')]//following-sibling::td[1]"
