--- a/src/main/python/ui/crm/model/BrandsXpath/rimarkets_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/rimarkets_xpath.yml
@@ -6,3 +6,5 @@ FinancialTransactionsPage:
   transaction_type_drop_down: "//td[7]/div/div[1]/button"
   transaction_type_element: "(//*[@id='listBody']//tr/td[7])[%s]"
   modified_time_element: "(//*[@id='listBody']//tr/td[14])[%s]"
+LeadDetailViewInfo:
+    referral: "//td[contains(text(),'Referral')]//following-sibling::td[1]"
