--- a/src/main/python/ui/crm/model/BrandsXpath/alphabetfx_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/alphabetfx_xpath.yml
@@ -4,3 +4,7 @@ FinancialTransactionsPage:
   transaction_type_drop_down: "//td[7]/div/div[1]/button"
   transaction_type_element: "(//*[@id='listBody']//tr/td[7])[%s]"
   modified_time_element: "(//*[@id='listBody']//tr/td[14])[%s]"
+ClientsPage:
+  id_client: "//a[contains(text(), 'ACC')]"
+  country: "//*[@id='customAdvanceSearch']/td[5]/div/div[1]/button"
+  country_input: "//*[@id='customAdvanceSearch']/td[5]/div/div[1]/ul/li[1]/div/input"
