--- a/src/main/python/ui/crm/model/BrandsXpath/gmo-dev_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/gmo-dev_xpath.yml
@@ -1,3 +1,10 @@
+LeadDetailViewInfo:
+    referral: "//td[contains(text(),'Referral')]//following-sibling::td[1]"
+TasksPage:
+    edit_event: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[3]/td[18]/div[5]/div/span"
+    subject_button: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[2]/td[3]/filters-factory/multiple-select-bs-filter/filter-multiple-select-bs/div/ss-multiselect-dropdown/div/button"
+    subject_field: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[2]/td[3]/filters-factory/multiple-select-bs-filter/filter-multiple-select-bs/div/ss-multiselect-dropdown/div/ul/li[1]/div/input"
+    event_type: "/html/body/app-root/tasks-list/div/div[2]/div/grid/div[2]/div/div[1]/table/tbody/tr[2]/td[3]/filters-factory/multiple-select-bs-filter/filter-multiple-select-bs/div/ss-multiselect-dropdown/div/ul/li[5]/a/span"
 FinancialTransactionsPage:
   transaction_type_drop_down: "//td[7]/div/div[1]/button"
   transaction_type_element: "(//*[@id='listBody']//tr/td[7])[%s]"
