--- a/src/main/python/ui/crm/model/BrandsXpath/gmo_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/gmo_xpath.yml
@@ -4,3 +4,5 @@ FinancialTransactionsPage:
   transaction_type_element: "(//*[@id='listBody']//tr/td[7])[%s]"
   transaction_type_drop_down: "//td[6]/div/div[1]/button"
   modified_time_element: "(//*[@id='listBody']//tr/td[15])[%s]"
+LeadDetailViewInfo:
+    referral: "//td[contains(text(),'Referral')]//following-sibling::td[1]"
