--- a/src/main/python/ui/crm/model/BrandsXpath/urf_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/urf_xpath.yml
@@ -1,3 +1,5 @@
 FinancialTransactionsPage:
   transaction_type_drop_down: "//td[7]/div/div[1]/button"
   transaction_type_element: "(//*[@id='listBody']//tr/td[7])[%s]"
+LeadDetailViewInfo:
+    referral: "//td[contains(text(),'Referral')]//following-sibling::td[1]"
