--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -11,9 +11,12 @@ FinancialTransactionsPage:
   trading_account_element: "(//*[@id='listBody']//tr/td[3])[%s]//a"
 LeadViewInfo:
   convert_lead_module: "//div[@id='sidebar']//tr[3]//a"
+CRMClientDeposit:
+  i_confirm_checkbox: "//*[@name='confirm']"
 ClientProfilePage:
   deposit_sum: "//tr[@class='lvtColData'][1]//td[3]"
   credit_in_sum: "//*[@id='rld_table_content']/tbody/tr[2]/td[6]/span[1]"
+  i_confirm_checkbox: "//*[@name='confirm']"
 ClientsPage:
   id_client: "//a[contains(text(), 'ACC')]"
   country: "//*[@id='customAdvanceSearch']/td[6]/div/div[1]/button"
