--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -102,8 +102,8 @@ brands:
 #  config_file: fm-fx.yml
 #- name: brokerxp
 #  config_file: brokerxp.yml
-#- name: finmarket
-#  config_file: finmarket.yml
+- name: finmarket
+  config_file: finmarket.yml
 #- name: fxpmarkets
 #  config_file: fxpmarkets.yml
 #- name: soarfx
@@ -131,8 +131,8 @@ brands:
 #- name: rimarkets-staging
 #  config_file: rimarkets-staging.yml
 ## production environments - old forex
-- name: itrader
-  config_file: itrader.yml
+#- name: itrader
+#  config_file: itrader.yml
 #- name: itrader_global
 #  config_file: itrader_global.yml
 #- name: otcapital
