old_forex_updating_of_brands_xpath: change xpath transtype for gmo

--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -32,7 +32,7 @@ tests_config:
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Add_Interaction
 #  class: AddInteraction
 #  tests:
-##    - test_add_interaction  # Adds an interaction for a client
+#    - test_add_interaction  # Adds an interaction for a client
 #    - test_interaction_search   # Searches for an interaction for a client. Validates that only one result is returned.
 #- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
 #  class: AddEventTaskModule
@@ -66,18 +66,18 @@ tests_config:
 ###    - test_make_credit_in_crm # Test was commented because it needs Client Area functionality but now CA is not configured
 #    - test_make_credit_in_from_crm
 ##Other
-#- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
-#  class: CalendarView
-#  tests:
-#    - test_check_day_tab
+- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
+  class: CalendarView
+  tests:
+    - test_check_day_tab
 #    - test_check_week_tab
 #    - test_check_month_tab
 - module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
   class: TabFinancialTransaction
   tests:
 #    - test_check_all_tab_from_financial_transactions
-##    - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
-    - test_check_search_via_button # Check search using search button
+   - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
+#    - test_check_search_via_button # Check search using search button
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
 #  class: TradingAccountCrmTest
