--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -102,8 +102,8 @@ brands:
 #  config_file: fm-fx.yml
 #- name: brokerxp
 #  config_file: brokerxp.yml
-- name: finmarket
-  config_file: finmarket.yml
+#- name: finmarket
+#  config_file: finmarket.yml
 #- name: fxpmarkets
 #  config_file: fxpmarkets.yml
 #- name: soarfx
@@ -112,8 +112,8 @@ brands:
 #  config_file: highfx.yml
 #- name: mlnfx
 #  config_file: mlnfx.yml
-#- name: gmo
-#  config_file: gmo.yml
+- name: gmo
+  config_file: gmo.yml
 #- name: gmo-dev
 #  config_file: gmo-dev.yml
 #- name: mtxplus
