--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -94,8 +94,8 @@ brands:
 
 
 # Old forex
-#- name: triomarkets
-#  config_file: triomarkets.yml
+- name: triomarkets
+  config_file: triomarkets.yml
 #- name: ogtrade
 #  config_file: ogtrade.yml
 #- name: fm-fx
@@ -139,8 +139,8 @@ brands:
 #  config_file: otcapital.yml
 #- name: urf
 #  config_file: urf_financial.yml
-- name: rimarkets
-  config_file: rimarkets.yml
+#- name: rimarkets
+#  config_file: rimarkets.yml
 #- name: kayafx
 #  config_file: kaya_fx.yml
 # testing environments - old forex
