new_forex_updating_of_brands_xpath: - test 'test_make_deposit_for_client_crm' was added - all changed related to this test were made

--- a/src/main/python/ui/crm/model/BrandsXpath/default.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/default.yml
@@ -18,3 +18,6 @@ FinancialTransactionsPage:
   modified_time_element: "(//*[@id='listBody']//tr/td[10])[%s]"
 ClientProfilePage:
   deposit_sum: "//tr[@class='lvtColData'][1]//td[3]"
+  i_confirm_checkbox: "//*[@name='confirm']"
+CRMClientDeposit:
+  i_confirm_checkbox: "//*[@name='confirm']"
