--- a/src/test/python/resources/config/tests2.yml
+++ b/src/test/python/resources/config/tests2.yml
@@ -1,25 +1,25 @@
 tests_config:
 
   #General
-#- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
-#  class: FilterModulesTest
-#  tests:
-#  - test_create_filter_clients_module
-#  - test_create_filter_documents_module
-#  - test_create_filter_leads_module
-#  - test_create_filter_help_desk
-#  - test_create_filter_trading_account_module
-##  #Leads
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
-#  class: TabLeadsModuleCRM
-#  tests:
-#    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-#  directive: reload_configuration
-#  class: LeadModuleTest
-#  tests:
-###    - test_create_lead   # Creates and lead. Included in the test_searching_lead_modules test
-##    - test_edit_lead  # Creates a new lead and edits it's data. Validates that the data changed.
+- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
+  class: FilterModulesTest
+  tests:
+  - test_create_filter_clients_module
+  - test_create_filter_documents_module
+  - test_create_filter_leads_module
+  - test_create_filter_help_desk
+  - test_create_filter_trading_account_module
+#  #Leads
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
+  class: TabLeadsModuleCRM
+  tests:
+    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
+- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+  directive: reload_configuration
+  class: LeadModuleTest
+  tests:
+    - test_create_lead   # Creates and lead. Included in the test_searching_lead_modules test
+    - test_edit_lead  # Creates a new lead and edits it's data. Validates that the data changed.
 #    - test_perform_convert_lead   # Creates a lead and converts it to a client
 ###
 ##### - search leads
@@ -75,23 +75,23 @@ tests_config:
 ##    - test_make_credit_in_crm # Test was commented because it needs Client Area functionality but now CA is not configured
 #    - test_make_credit_in_from_crm
 ###Other
-- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
-  class: CalendarView
-  tests:
-    - test_check_day_tab
-    - test_check_week_tab
-    - test_check_month_tab
-- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
-  class: TabFinancialTransaction
-  tests:
-    - test_check_all_tab_from_financial_transactions
-     ## PRECONDITION: No
-    - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
-     ## PRECONDITION: No
-    - test_check_search_via_button # Check search using search button
-
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
-  class: TradingAccountCrmTest
-  tests:
-    - test_crm_open_trading_account  # open a new trading account
-    - test_crm_edit_trading_account  # edit trading account
+#- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
+#  class: CalendarView
+#  tests:
+#    - test_check_day_tab
+#    - test_check_week_tab
+#    - test_check_month_tab
+#- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
+#  class: TabFinancialTransaction
+#  tests:
+#    - test_check_all_tab_from_financial_transactions
+#     ## PRECONDITION: No
+#    - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
+#     ## PRECONDITION: No
+#    - test_check_search_via_button # Check search using search button
+#
+#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
+#  class: TradingAccountCrmTest
+#  tests:
+#    - test_crm_open_trading_account  # open a new trading account
+#    - test_crm_edit_trading_account  # edit trading account
