old_forex_updating_of_brands_xpath_multi-TEST5: brands for jenkins

--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -4,12 +4,12 @@ brands:
 #
 ## production environmets - new forex
 #
-- name: royal_cfds
-  config_file: royal_cfds.yml
-##- name: lq-fx
-##  config_file: lq-fx.yml
-- name: jonesmutual
-  config_file: jonesmutual.yml
+#- name: royal_cfds
+#  config_file: royal_cfds.yml
+#- name: lq-fx
+#  config_file: lq-fx.yml
+#- name: jonesmutual
+#  config_file: jonesmutual.yml
 ##- name: hamiltonfordgroup
 ##  config_file: hamiltonfordgroup.yml
 ##- name: baronsvc
