--- a/src/test/python/resources/config/tests3.yml
+++ b/src/test/python/resources/config/tests3.yml
@@ -1,58 +1,21 @@
 tests_config:
 
-  #General
-#- module: src.test.python.ui.automation.implementation.crm.tests_create_filters.Test_Create_Filter
-#  class: FilterModulesTest
-#  tests:
-#  - test_create_filter_clients_module
-#  - test_create_filter_documents_module
-#  - test_create_filter_leads_module
-#  - test_create_filter_help_desk
-#  - test_create_filter_trading_account_module
-##  #Leads
-#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Tab_Leads_Module
-#  class: TabLeadsModuleCRM
-#  tests:
-#    - test_searching_lead_modules   # Creates a new lead and searches it. Validates that only one result is returned.
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-  directive: reload_configuration
-  class: LeadModuleTest
+- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
+  class: CalendarView
   tests:
-##    - test_create_lead   # Creates and lead. Included in the test_searching_lead_modules test
-#    - test_edit_lead  # Creates a new lead and edits it's data. Validates that the data changed.
-    - test_perform_convert_lead   # Creates a lead and converts it to a client
-###
-##### - search leads
-####
-#####Clients
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
-  class: SearchingClientsTestCRM
+    - test_check_day_tab
+    - test_check_week_tab
+    - test_check_month_tab
+- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
+  class: TabFinancialTransaction
   tests:
-     ## PRECONDITION: - test_perform_convert_lead
-    - test_make_searching_client_module   # Searches for a client.
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Add_Interaction
-  class: AddInteraction
-  tests:
-     ## PRECONDITION: - test_perform_convert_lead
-    - test_add_interaction  # Adds an interaction for a client
-     # PRECONDITION: - test_perform_convert_lead
-    - test_interaction_search   # Searches for an interaction for a client. Validates that only one result is returned.
-- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
-  class: AddEventTaskModule
-  tests:
-    ## PRECONDITION: - test_perform_convert_lead;
-    - test_add_event
-    ## PRECONDITION: - test_perform_convert_lead; - test_add_event
-    - test_edit_event
-##
-###MT4
-###MT4
+    - test_check_all_tab_from_financial_transactions
+    - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
+    - test_check_search_via_button # Check search using search button
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
   class: TradingAccountCrmTest
   tests:
-#     ## PRECONDITION: - test_perform_convert_lead
-    - test_crm_open_live_trading_account  # open a new LIVE trading account. USE THIS TEST FOR TEST 'test_make_deposit_for_client_crm'
-    - test_crm_open_trading_account  # open a new DEMO trading account. USE THIS TEST FOR CHECK/CHANGE PASSWORD TESTS AND OTHERS
+    - test_crm_open_trading_account  # open a new trading account
 - module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Check_Password
   class: CheckPasswordTestCRM
   tests:
@@ -62,36 +25,4 @@ tests_config:
   class: ChangePasswordTestCRM
   tests:
     - test_change_client_password_from_crm  # change a client account password from the crm
-    - test_change_mt4_password_from_crm  # change an MT4 account password from the crm
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Deposit
-  class: DepositTestCRM
-  tests:
-    - test_make_deposit_crm  # make a deposit into a trading account from the crm
-    ## PRECONDITION: - test_crm_open_live_trading_account
-    - test_make_deposit_for_client_crm    # please keep it as comment
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_In
-#  class: CreditInTestCRM
-#  tests:
-##    - test_make_credit_in_crm # Test was commented because it needs Client Area functionality but now CA is not configured
-#    - test_make_credit_in_from_crm
-###Other
-#- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
-#  class: CalendarView
-#  tests:
-#    - test_check_day_tab
-#    - test_check_week_tab
-#    - test_check_month_tab
-#- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
-#  class: TabFinancialTransaction
-#  tests:
-#    - test_check_all_tab_from_financial_transactions
-#     ## PRECONDITION: No
-#    - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
-#     ## PRECONDITION: No
-#    - test_check_search_via_button # Check search using search button
-#
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
-#  class: TradingAccountCrmTest
-#  tests:
-#    - test_crm_open_trading_account  # open a new trading account
-#    - test_crm_edit_trading_account  # edit trading account
+    - test_change_mt4_password_from_crm
