--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -4,22 +4,22 @@ brands:
 #
 ## production environmets - new forex
 
-- name: royal_cfds
-  config_file: royal_cfds.yml
-#- name: lq-fx
-#  config_file: lq-fx.yml
-- name: jonesmutual
-  config_file: jonesmutual.yml
-#- name: hamiltonfordgroup
-#  config_file: hamiltonfordgroup.yml
-#- name: baronsvc
-#  config_file: baronsvc.yml
-- name: mpcrypto
-  config_file: mpcrypto.yml
-- name: forexbestmarket
-  config_file: forexbestmarket.yml
-- name: newrichmarkets
-  config_file: newrichmarkets.yml
+#- name: royal_cfds
+#  config_file: royal_cfds.yml
+##- name: lq-fx
+##  config_file: lq-fx.yml
+#- name: jonesmutual
+#  config_file: jonesmutual.yml
+##- name: hamiltonfordgroup
+##  config_file: hamiltonfordgroup.yml
+##- name: baronsvc
+##  config_file: baronsvc.yml
+#- name: mpcrypto
+#  config_file: mpcrypto.yml
+#- name: forexbestmarket
+#  config_file: forexbestmarket.yml
+#- name: newrichmarkets
+#  config_file: newrichmarkets.yml
 - name: solocapitlas
   config_file: solocapitlas.yml
 - name: goldenmarkets
