--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -23,6 +23,7 @@ FirstLeadInfo:
   first_lead_source: "Conference"
   first_lead_status: "R - New"
   first_lead_status_new: "New"
+  first_lead_status_uft: "New"
   first_assigned_to: "pandaqa pandaqa"
   first_source_name: "source name test"
   brand:
@@ -53,6 +54,7 @@ SecondLeadInfo:
   first_lead_source: "Conference"
   first_lead_status: "B - No interest"
   first_lead_status_new: "Not interested"
+  first_lead_status_uft: "No interest"
   first_assigned_to: "pandaqa pandaqa"
   first_source_name: "source name test"
   brand:
@@ -112,21 +114,26 @@ trading_account_1:
   server: "Demo"
   server_live: "Live"
   currency: "USD"
+  currency_EUR: "EUR"
   currency_BCH: "BCH"
   group: "USD"
   demo: "demo"
   live: "live"
   leverage: "100"
+  leverage_400: "400"
   leverage_1_200: "200"
 trading_account_1_demo_upd:
   trading_account_demo: "Demo"
   group: "demo"
   leverage: "200"
+  leverage_400: "400"
 trading_account_1_live:
   server: "Live"
   currency: "USD"
+  currency_EUR: "EUR"
   group: "USD"
   leverage: "100"
+  leverage_400: "400"
   trading_account_live_1_200: "200"
 module_clients_filter:
   test_filter: "TestFilterClientsModule"
