old_forex_updating_of_brands_xpath_multi-TEST : add new changes

--- a/src/test/python/resources/config/default.yml
+++ b/src/test/python/resources/config/default.yml
@@ -83,7 +83,9 @@ client_1:
   birthday: "1971-01-01"
   country: "Germany"
   country_sa: "South Africa"
+  country_me: "Mexico"
   first_country_sa: "South Africa"
+  first_country_me: "Mexico"
   first_country: "Germany"
   street: "My street"
   city: "Berlin"
