old_forex_updating_of_brands_xpath_multi-TEST : add new changes

--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -50,26 +50,26 @@ brands:
 #  config_file: 2mercados.yml
 #- name: axa_markets
 #  config_file: axa_markets.yml
-#- name: aztrades
-#  config_file: aztrades.yml
-- name: bots
-  config_file: bots.yml
-- name: kontofx
-  config_file: kontofx.yml
+##- name: aztrades
+##  config_file: aztrades.yml
+##- name: bots
+##  config_file: bots.yml
+##- name: kontofx
+##  config_file: kontofx.yml
 #- name: xtraderfx
 #  config_file: xtraderfx.yml
-- name: firstindex
-  config_file: firstindex.yml
-#- name: coinstec
-#  config_file: coinstec.yml
-#- name: swisscci
-#  config_file: swisscci.yml
-#- name: tradospot
-#  config_file: tradospot.yml
-#- name: etoroc
-#  config_file: etoroc.yml
-#- name: 24btcmarket
-#  config_file: 24btcmarket.yml
+##- name: firstindex
+##  config_file: firstindex.yml
+##- name: coinstec
+##  config_file: coinstec.yml
+##- name: swisscci
+##  config_file: swisscci.yml
+##- name: tradospot
+##  config_file: tradospot.yml
+##- name: etoroc
+##  config_file: etoroc.yml
+- name: 24btcmarket
+  config_file: 24btcmarket.yml
 #- name: marketsplus
 #  config_file: marketsplus.yml
 #- name: eu4xsolutions
