--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -10,10 +10,10 @@ tests_config:
 ##  class: SearchingClientsTestCRM
 ##  tests:
 ##    - test_make_searching_client_module   # Searches for a client.
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Add_Interaction
-#  class: AddInteraction
-#  tests:
-#    - test_add_interaction  # Adds an interaction for a client
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Add_Interaction
+  class: AddInteraction
+  tests:
+    - test_add_interaction  # Adds an interaction for a client
 #    - test_interaction_search   # Searches for an interaction for a client. Validates that only one result is returned.
 #- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Event
 #  class: AddEventTaskModule
@@ -21,10 +21,10 @@ tests_config:
 #    - test_add_event
 #    - test_edit_event
 #####MT4
-#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
-#  class: TradingAccountCrmTest
-#  tests:
-#    - test_crm_open_trading_account  # open a new trading account
+- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
+  class: TradingAccountCrmTest
+  tests:
+    - test_crm_open_trading_account  # open a new trading account
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Check_Password
 #  class: CheckPasswordTestCRM
 #  tests:
@@ -39,12 +39,12 @@ tests_config:
   class: DepositTestCRM
   tests:
     - test_make_deposit_crm  # make a deposit into a trading account from the crm
-#    - test_make_deposit_for_client_crm
-- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_In
-  class: CreditInTestCRM
-  tests:
+    - test_make_deposit_for_client_crm
+#- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Make_Credit_In
+#  class: CreditInTestCRM
+#  tests:
 ##    - test_make_credit_in_crm # Test was commented because it needs Client Area functionality but now CA is not configured
-    - test_make_credit_in_from_crm
+#    - test_make_credit_in_from_crm
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Trading_Account
 #  class: TradingAccountCrmTest
 #  tests:
