old_forex_updating_of_brands_xpath_multi_brands: create new branches with multiprocessing for brands and fixed flaky tests + IP PUBLIC

--- a/src/main/python/ui/crm/model/BrandsXpath/itrader_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/itrader_xpath.yml
@@ -1,2 +1,4 @@
 LeadDetailViewInfo:
     referral: "//td[contains(text(),'Referral')]//following-sibling::td[1]"
+FinancialTransactionsPage:
+  modified_time_element: "(//*[@id='listBody']//tr/td[14])[%s]"
