--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -1,15 +1,15 @@
 brands:
 
-- name: triomarkets
-  config_file: triomarkets.yml
-- name: ogtrade
-  config_file: ogtrade.yml
-- name: fm-fx
-  config_file: fm-fx.yml
-- name: brokerxp
-  config_file: brokerxp.yml
-- name: finmarket
-  config_file: finmarket.yml
+#- name: triomarkets
+#  config_file: triomarkets.yml
+#- name: ogtrade
+#  config_file: ogtrade.yml
+#- name: fm-fx
+#  config_file: fm-fx.yml
+#- name: brokerxp
+#  config_file: brokerxp.yml
+#- name: finmarket
+#  config_file: finmarket.yml
 
 
 
