--- a/src/test/python/resources/config/brands3.yml
+++ b/src/test/python/resources/config/brands3.yml
@@ -1,10 +1,10 @@
 brands:
 
-- name: oinvestsa
-  config_file: oinvestsa.yml
-- name: itrader
-  config_file: itrader.yml
-- name: itrader_global
-  config_file: itrader_global.yml
-- name: otcapital
-  config_file: otcapital.yml
+#- name: oinvestsa
+#  config_file: oinvestsa.yml
+#- name: itrader
+#  config_file: itrader.yml
+#- name: itrader_global
+#  config_file: itrader_global.yml
+#- name: otcapital
+#  config_file: otcapital.yml
