old_forex_updating_of_brands_xpath_multi_brands: add newforexstaging for test amount credit

--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -1,9 +1,11 @@
 brands:
 
-- name: newforexstaging
-  config_file: new_forex_staging.yml
-#- name: royal_cfds
-#  config_file: royal_cfds.yml
+# testing on
+#- name: newforexstaging
+#  config_file: new_forex_staging.yml
+# prod
+- name: royal_cfds
+  config_file: royal_cfds.yml
 #- name: jonesmutual
 #  config_file: jonesmutual.yml
 #- name: forexbestmarket
