old_forex_updating_of_brands_xpath_multi_brands: add newforexstaging for test amount credit

--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -4,7 +4,7 @@ brands:
 #  config_file: fxpmarkets.yml
 #- name: soarfx
 #  config_file: soarfx.yml
-#- name: highfx
-#  config_file: highfx.yml
+- name: highfx
+  config_file: highfx.yml
 #- name: mlnfx
 #  config_file: mlnfx.yml
