--- a/src/test/python/resources/config/brands4.yml
+++ b/src/test/python/resources/config/brands4.yml
@@ -2,8 +2,8 @@ brands:
 
 #- name: rimarkets
 #  config_file: rimarkets.yml
-- name: kayafx
-  config_file: kaya_fx.yml
+#- name: kayafx
+#  config_file: kaya_fx.yml
 #- name: urf
 #  config_file: urf_financial.yml
 #- name: gmo
