old_forex_updating_of_brands_xpath_multi_brands: add newforexstaging for test amount credit

--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,7 +1,7 @@
 brands:
 
-#- name: goldenmarkets
-#  config_file: goldenmarkets.yml
+- name: goldenmarkets
+  config_file: goldenmarkets.yml
 #- name: safemarkets
 #  config_file: safemarkets.yml
 #- name: optionstars
