--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -1,9 +1,7 @@
 brands:
 
-#- name: 4xfx
-#  config_file: 4xfx.yml
-#- name: herdos
-#  config_file: herdos.yml
+- name: 4xfx
+  config_file: 4xfx.yml
 #- name: ptbanc
 #  config_file: ptbanc.yml
 #- name: q8
