--- a/src/test/python/resources/config/brands4.yml
+++ b/src/test/python/resources/config/brands4.yml
@@ -1,7 +1,7 @@
 brands:
 
-#- name: firstindex
-#  config_file: firstindex.yml
+- name: firstindex
+  config_file: firstindex.yml
 #- name: coinstec
 #  config_file: coinstec.yml
 #- name: tradospot
