old_forex_updating_of_brands_xpath_multi_brands: add newforexstaging for test amount credit

--- a/src/test/python/resources/config/brands3.yml
+++ b/src/test/python/resources/config/brands3.yml
@@ -1,7 +1,7 @@
 brands:
 
-- name: axa_markets
-  config_file: axa_markets.yml
+#- name: axa_markets
+#  config_file: axa_markets.yml
 #- name: aztrades
 #  config_file: aztrades.yml
 #- name: bots
