--- a/src/test/python/resources/config/brands6.yml
+++ b/src/test/python/resources/config/brands6.yml
@@ -1,4 +1,4 @@
 brands:
 
-- name: forexbestmarket
-  config_file: forexbestmarket.yml
+#- name: forexbestmarket
+#  config_file: forexbestmarket.yml
