new_forex_updating_of_brands_xpath_multi_brands_linux: l

--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -1,8 +1,9 @@
 brands:
-
-- name: royal_cfds
-  config_file: royal_cfds.yml
-
+#
+#- name: royal_cfds
+#  config_file: royal_cfds.yml
+- name: firstindex
+  config_file: firstindex.yml
 
 
 
