old_forex_updating_of_brands_xpath_multi-TEST: updates for run multi

--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -2,8 +2,8 @@ brands:
 
 #- name: goldenmarkets
 #  config_file: goldenmarkets.yml
-- name: safemarkets
-  config_file: safemarkets.yml
+#- name: safemarkets
+#  config_file: safemarkets.yml
 #- name: optionstars
 #  config_file: optionstars.yml
 #- name: uft
