demo: one brands

--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,10 +1,11 @@
 brands:
 
-#- name: fxpmarkets
-#  config_file: fxpmarkets.yml
+
 #- name: soarfx
 #  config_file: soarfx.yml
-- name: highfx
-  config_file: highfx.yml
+#- name: highfx
+#  config_file: highfx.yml
 #- name: mlnfx
 #  config_file: mlnfx.yml
+#- name: gmo-dev
+#  config_file: gmo-dev.yml
