--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -10,15 +10,26 @@ brands:
 #  config_file: brokerxp.yml
 #- name: finmarket
 #  config_file: finmarket.yml
-
-
-
-
-
-
-
-
-
+#- name: fxpmarkets
+#  config_file: fxpmarkets.yml
+#- name: highfx
+#  config_file: highfx.yml
+#- name: oinvestsa
+#  config_file: oinvestsa.yml
+#- name: otcapital
+#  config_file: otcapital.yml
+#- name: rimarkets
+#  config_file: rimarkets.yml
+#- name: 24fxm
+#  config_file: 24fxm.ym
+#- name: gmo
+#  config_file: gmo.yml
+#- name: urf
+#  config_file: urf_financial.yml
+#- name: alphabetfx
+#  config_file: alphabetfx.yml
+#- name: triomarkets
+#  config_file: triomarkets.yml
 
 
 
