NF_add_new_test: added files for test create documents

--- a/src/test/python/resources/config/brands.yml
+++ b/src/test/python/resources/config/brands.yml
@@ -22,10 +22,10 @@ brands:
 #  config_file: bots.yml
 #- name: goldenmarkets
 #  config_file: goldenmarkets.yml
-#- name: herdos
-#  config_file: herdos.yml
-- name: xtraderfx
-  config_file: xtraderfx.yml
+- name: herdos
+  config_file: herdos.yml
+#- name: xtraderfx
+#  config_file: xtraderfx.yml
 
 
 
