old_forex_updating_of_brands_xpath_multi-TEST: updates for run multi

--- a/src/test/python/resources/config/brands4.yml
+++ b/src/test/python/resources/config/brands4.yml
@@ -1,10 +1,10 @@
 brands:
 
-- name: rimarkets
-  config_file: rimarkets.yml
-- name: kayafx
-  config_file: kaya_fx.yml
-- name: urf
-  config_file: urf_financial.yml
-- name: gmo
-  config_file: gmo.yml
+#- name: rimarkets
+#  config_file: rimarkets.yml
+#- name: kayafx
+#  config_file: kaya_fx.yml
+#- name: urf
+#  config_file: urf_financial.yml
+#- name: gmo
+#  config_file: gmo.yml
