NF_add_new_test: added test export financial transactions

--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -20,11 +20,11 @@ tests_config:
 #  tests:
 #    - test_create_lead   # Creates and lead. Included in the test_searching_lead_modules test
 #    - test_edit_lead
-- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
-  directive: reload_configuration
-  class: LeadModuleTest
-  tests:
-    - test_perform_convert_lead   # Creates a lead and converts it to a client
+#- module: src.test.python.ui.automation.implementation.crm.tests_leads_module.Test_Leads_Module
+#  directive: reload_configuration
+#  class: LeadModuleTest
+#  tests:
+#    - test_perform_convert_lead   # Creates a lead and converts it to a client
 #####Clients
 #- module: src.test.python.ui.automation.implementation.crm.tests_clients_module.Test_Searching_Clients
 #  class: SearchingClientsTestCRM
@@ -69,20 +69,22 @@ tests_config:
 #  class: TradingAccountCrmTest
 #  tests:
 #    - test_crm_edit_trading_account  # edit trading account
-- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
-  class: CalendarView
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_tasks_module.Test_Calendar_View
+#  class: CalendarView
+#  tests:
 #    - test_check_day_tab
 #    - test_check_week_tab
 #    - test_check_month_tab
-     - test_check_add_tasks_calendar_view #preconditions convert lead
-#- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
-#  class: TabFinancialTransaction
-#  tests:
+#     - test_check_add_tasks_calendar_view #preconditions convert lead
+- module: src.test.python.ui.automation.implementation.crm.tests_financial_transactions.Test_Tab_Financial_Transaction_Module
+  class: TabFinancialTransaction
+  tests:
 #    - test_check_all_tab_from_financial_transactions
 #    - test_check_searching_by_column # Check filters in columns -  all required columns (customer name, date, transaction type, trading account number, transaction number)
 #    - test_check_search_via_button # Check search using search button
-- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Create_Documents
-  class: CreateDocument
-  tests:
-    - test_create_documents
+     - test_export_financial_transactions_csv
+     - test_export_financial_transactions_xls
+#- module: src.test.python.ui.automation.implementation.crm.tests_document_module.Create_Documents
+#  class: CreateDocument
+#  tests:
+#    - test_create_documents
