--- a/src/test/python/resources/config/brands4.yml
+++ b/src/test/python/resources/config/brands4.yml
@@ -1,10 +1,9 @@
 brands:
 
-#- name: firstindex
-#  config_file: firstindex.yml
-#- name: coinstec
-#  config_file: coinstec.yml
-#- name: 24btcmarket
-#  config_file: 24btcmarket.yml
-#- name: marketsplus
-#  config_file: marketsplus.yml
+- name: firstindex
+  config_file: firstindex.yml
+- name: coinstec
+  config_file: coinstec.yml
+- name: 24btcmarket
+  config_file: 24btcmarket.yml
+
