--- a/src/test/python/resources/config/brands7.yml
+++ b/src/test/python/resources/config/brands7.yml
@@ -1,4 +1,8 @@
 brands:
 
-#- name: newrichmarkets
-#  config_file: newrichmarkets.yml
+- name: newrichmarkets
+  config_file: newrichmarkets.yml
+- name: swiftcfd
+  config_file: swiftcfd.yml
+- name: tfxgo
+  config_file: tfxgo.yml
