--- a/src/test/python/resources/config/brands8.yml
+++ b/src/test/python/resources/config/brands8.yml
@@ -1,4 +1,8 @@
 brands:
-#
-#- name: solocapitlas
-#  config_file: solocapitlas.yml
+
+- name: solocapitlas
+  config_file: solocapitlas.yml
+- name: olympusmarkets
+  config_file: olympusmarkets.yml
+- name: privat-trade
+  config_file: privat-trade.yml
