--- a/src/test/python/resources/config/brands2.yml
+++ b/src/test/python/resources/config/brands2.yml
@@ -1,13 +1,12 @@
 brands:
 
-#- name: 4xfx
-#  config_file: 4xfx.yml
-#- name: ptbanc
-#  config_file: ptbanc.yml
-#- name: q8
-#  config_file: q8.yml
-#- name: 2mercados
-#  config_file: 2mercados.yml
+- name: 4xfx
+  config_file: 4xfx.yml
+- name: ptbanc
+  config_file: ptbanc.yml
+- name: q8
+  config_file: q8.yml
+
 
 
 
