--- a/src/test/python/resources/config/brands9.yml
+++ b/src/test/python/resources/config/brands9.yml
@@ -1,4 +1,8 @@
 brands:
 
-#- name: herdos
-#  config_file: herdos.yml
+- name: herdos
+  config_file: herdos.yml
+- name: hizlifx
+  config_file: hizlifx.yml
+- name: libramarkets
+  config_file: libramarkets.yml
