--- a/src/main/python/ui/crm/model/BrandsXpath/24fxm_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/24fxm_xpath.yml
@@ -1,3 +1,7 @@
 FinancialTransactionsPage:
+  client_name_element: "(//*[@id='listBody']//tr/td[4])[%s]"
   transaction_type_drop_down: "//td[7]/div/div[1]/button"
   transaction_type_element: "(//*[@id='listBody']//tr/td[7])[%s]"
+  modified_time_element: "(//*[@id='listBody']//tr/td[10])[%s]"
+  trading_account_element: "(//*[@id='listBody']//tr/td[3])[%s]//a"
+
